# Protocol-01

./: .gitignore  .prettierignore  AGENT_SYNC.md  Anchor.toml  CLAUDE_MEMO_ZK_IMPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  TODO_BUILD_FIX.md  build-wsl.sh  docker-build.sh  logs-android.txt  logs-ios.txt  package-lock.json  package.json  pnpm-lock.yaml  start-hackathon.ps1  tsconfig.json  tsconfig.test.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-anchor.yml  deploy-web.yml  sync-all.yml  sync-repos.yml
.test-runner/: package.json  vitest.config.mjs
apps/extension/: .env.example  .eslintrc.json  manifest.json  package.json  pnpm-lock.yaml  popup.html  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1768849669357-11bf88abe75.mjs  vite.config.ts.timestamp-1769370533402-df278f2f5cede.mjs  vite.config.ts.timestamp-1769374610066-6f3950eb3aaa08.mjs  vitest.config.ts
apps/extension/public/: inject.js
apps/extension/src/: vite-env.d.ts
apps/extension/src/__mocks__/: framer-motion.tsx
apps/extension/src/__tests__/: helpers.tsx  render.tsx  setup.ts
apps/extension/src/background/: index.ts
apps/extension/src/content/: index.ts
apps/extension/src/inject/: index.ts
apps/extension/src/popup/: App.tsx  main.tsx
apps/extension/src/shared/: messaging.ts  storage.ts  types.ts  utils.test.ts  utils.ts
apps/extension/src/types/: ed25519-hd-key.d.ts
apps/mobile/: .env.example  SECURITY.md  app.json  babel.config.js  build-android.bat  eas-build.exp  eas-cloud-build.exp  eas-init.exp  eas.json  global.css  index.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
apps/mobile/android/: gradle.properties  settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(auth)/: _layout.tsx  import.tsx  lock.tsx  login.tsx
apps/mobile/app/(main)/: _layout.tsx
apps/mobile/app/(onboarding)/: _layout.tsx  backup.tsx  create-wallet.tsx  features.tsx  index.tsx  security.tsx  verify.tsx
apps/mobile/components/: TokenIcon.tsx  index.ts
apps/mobile/components/agent/: ActionPreview.tsx  AgentAvatar.tsx  ChatBubble.tsx  ExecutionProgress.tsx  QuickActionButton.tsx  SuggestionChip.tsx  index.ts
apps/mobile/components/auth/: AuthScreen.tsx  EmailLoginForm.tsx  PrivyLoginButton.tsx  index.ts
apps/mobile/components/common/: EmptyState.tsx  Header.tsx  ScreenWrapper.tsx  TabBar.tsx  index.ts
apps/mobile/components/mesh/: ProximityBump.tsx  QRCodeGenerator.tsx  QRScanner.tsx  index.ts
apps/mobile/components/navigation/: SwipeableTabWrapper.tsx  (+1 more)
apps/mobile/config/: privy.ts
apps/mobile/constants/: theme.ts
apps/mobile/hooks/: index.ts  useLoadFonts.ts  useSecuritySettings.ts
apps/mobile/polyfills/: empty.js  ox-erc8010.js
apps/mobile/providers/: AlertProvider.tsx  PrivyProvider.tsx  ZkProverProvider.tsx
apps/mobile/stores/: aiStore.ts  contactsStore.ts  meshStore.ts  messageStore.ts  privacyStore.ts  settingsStore.test.ts  settingsStore.ts  shieldedStore.ts  splitTransactionStore.ts  streamStore.ts  transactionPrivacyStore.test.ts  transactionPrivacyStore.ts  walletStore.test.ts  walletStore.ts
apps/mobile/test/: setup.ts
apps/mobile/utils/: index.ts
apps/web/: .env.example  .gitignore  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
apps/web/__tests__/: setup.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: CTA.tsx  DepthBackground.tsx  Features.tsx  Footer.tsx  GlitchLogo01.tsx  GlitchText01.tsx  GridBackground.tsx  Hero.tsx  PhoneMockup.tsx  Problem.tsx  TechStack.tsx  TerminalAnimation.tsx  WalletProvider.tsx  index.ts
circuits/: merkle.circom  package-lock.json  package.json  poseidon.circom  transfer.circom
circuits/test/: transfer.test.js
docs/: EXTENSION.md  FEATURES.md  MOBILE.md  ROADMAP.md  SDK.md  WEB.md
docs/assets/screenshots/: SCREENSHOTS_A_PRENDRE.md
p01/apps/mobile/: eas.json  pnpm-lock.yaml
programs/p01-fee-splitter/: Cargo.toml
programs/p01-fee-splitter/src/: lib.rs
programs/specter/: Cargo.toml
programs/specter/src/: errors.rs  lib.rs
programs/specter/src/instructions/: cancel_stream.rs  claim_stealth.rs  create_stream.rs  init_wallet.rs  mod.rs  send_private.rs  withdraw_stream.rs
programs/specter/src/state/: mod.rs  stealth.rs  stream.rs  wallet.rs
programs/stream/: Cargo.toml
programs/stream/src/: lib.rs
programs/subscription/: Cargo.toml
programs/subscription/src/: lib.rs
programs/whitelist/: Cargo.toml
programs/whitelist/src/: lib.rs
programs/zk_shielded/: Cargo.toml
programs/zk_shielded/src/: errors.rs  lib.rs
programs/zk_shielded/src/instructions/: initialize_pool.rs  mod.rs  shield.rs  store_vk_data.rs  transfer.rs  transfer_via_relayer.rs  unshield.rs  update_vk.rs
programs/zk_shielded/src/state/: merkle_tree.rs  mod.rs  nullifier_set.rs  pool.rs
programs/zk_shielded/src/verifier/: groth16.rs  mod.rs
scripts/: build-deploy-zk.sh  build-program.sh  check-pool-state.ts  check-token-mint.ts  debug-merkle.mjs  debug-mobile-inputs.js  debug-zk-merkle.js  deploy-zk-v2.sh  full-diagnostic.ts  generate-circuit-data.js  init-pool-devnet.ts  init-sol-pool.ts  init-test-pool.ts  rebuild-zk-shielded.sh  setup-solana-wsl.sh  simulate-unshield.ts  upload-vk.ts  verify-note.ts  verify-zeros.ts  wsl-build.sh
services/relayer/: .env.example  package.json  test-real-proof.ts  test-verification.ts
services/relayer/src/: index.ts  private-send.test.ts
tests/: e2e-auth-flow.test.ts  e2e-privacy-modes.test.ts  e2e-stealth-payments.test.ts  e2e-stream-secure.test.ts  fee-splitter.test.ts  specter.test.ts  stream.test.ts  subscription.test.ts  whitelist.test.ts  zk-e2e.test.ts  zk-shielded-pool.test.ts  zk-shielded.test.ts  zk-transfer.test.ts
tools/solana-edition-fixer/: README.md  edition2024-database.json  fix-edition2024.sh  solana-edition-fixer.js
tools/solana-lock-generator/: README.md  fix-all-deps.sh  fix-deps.js  generate-compatible-lock.sh
(+362 files in other folders)
