[package]
name = "p01-fee-splitter"
version = "0.1.0"
description = "P-01 Network Fee Splitter - Automatically takes 0.5% fee on transactions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p01_fee_splitter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
