[package]
name = "specter"
version = "0.1.0"
description = "Specter Protocol - Privacy-focused Solana program with stealth payments and streaming"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "specter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1", features = ["full"] }
