[package]
name = "p01-stream"
version = "0.1.0"
description = "Protocol 01 Stream Payments - Recurring subscription payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p01_stream"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
