[package]
name = "p01-subscription"
version = "0.1.0"
description = "P01 Subscription Program - Delegated recurring payments with on-chain validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p01_subscription"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
