[package]
name = "zk_shielded"
version = "0.1.0"
description = "Specter Protocol - ZK Shielded Pool with Groth16 verification"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_shielded"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

# Solana program for alt_bn128 operations
solana-program = "1.18"

# Hash function for verification key hashing
sha3 = "0.10"

# Required for zero-copy accounts
bytemuck = { version = "1.14", features = ["derive"] }

# Note: Groth16 verification uses Solana's native alt_bn128 syscall
# This eliminates heavy ark-* dependencies and stack overflow issues

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }
